# wildfire-spotting

./: .gitignore  Readme.MD  pyproject.toml
configs/: config.yaml
data/processed/: labels_test.parquet  weather_test.parquet
data/raw/era5/: era5_2022_07_accum.nc  era5_2022_07_instant.nc
data/raw/firms/: firms_2022_07.csv
notebooks/: 01_era5_exploration.ipynb
src/features/: build_dataset.py  grid.py  label.py  weather_features.py
src/ingestion/: era5_ingestion.py  firms_ingestion.py
